--- a/sonic/floats.tex
+++ b/sonic/floats.tex
@@ -47,7 +47,7 @@
 	\includegraphics[width=0.55\linewidth]{sonic/figures/pdf/overview-crop}
 	\caption{\label{fig:sonic:overview} Overview of implementing a DNN application using \sonictails.
 	\genesis first compresses the network to optimize interesting messages sent per Joule (\metric).
-	\sonictails then ensure correct intermittent execution at high performance~\cite{Gobieski2018IntermittentDN}.
+	\sonictails then ensure correct intermittent execution at high performance~\cite{Gobieski2018IntermittentDN\graham{Replace with new styled figure}}.
 }
 \end{figure}
 }
