wrote transition for manic chapter

--- a/2_background.tex
+++ b/2_background.tex
@@ -279,6 +279,7 @@ Specifically, prior work on vector and dataflow architectures inform the work of
 These architectures exploit structure in the program (among data and control-flow) to change the execution model to reduce or even eliminate instruction and data supply energies without sacrificing general-purpose programmability.
 
 \subsection{Vector architectures}
+\label{chapter:background:program:vector}
 Vector machines exploit data-parallelism to amortize instruction supply energy (i.e. fetch, decode, and issue) across many operations.
 % 
 Early vector machines targetted super-computing~\cite{cray_patent}, but most commercially available architectures (e.g., AVX~\cite{avx} and GPUs~\cite{fermi}) today support vectors.
