--- a/manic/floats.tex
+++ b/manic/floats.tex
@@ -1,33 +1,32 @@
 \newcommand{\figMANICDesignSpace} {
 	\begin{figure}[t]
 		\centering
-		\includegraphics[width=0.8\linewidth]{manic/figures/pdf/overview-crop.pdf}
+		\includegraphics[width=0.45\linewidth]{manic/figures/pdf/overview-crop.pdf}
 		\hfill
 		\caption{\manic seeks to improve energy efficiency without compromising programmability.}
 		\label{fig:manic:intro}
-		\vspace{-1.5em}
 	\end{figure}	
 }
 
 \newcommand{\figMANICOverview}{
-	\begin{figure}[t]
+	\begin{figure}[htb]
     \begin{subfigure}{0.14\linewidth}
     		\centering
-        \includegraphics[height=1.2in]{manic/figures/pdf/scalar_overview-crop.pdf}
+        \includegraphics[height=1.7in]{manic/figures/pdf/scalar_overview-crop.pdf}
         \caption{Scalar}
         \label{fig:manic:overview:scalar}
     \end{subfigure}
     \hfill
     \begin{subfigure}{0.42\linewidth}
         \centering
-        \includegraphics[height=1.2in]{manic/figures/pdf/vector_overview-crop.pdf}
+        \includegraphics[height=1.7in]{manic/figures/pdf/vector_overview-crop.pdf}
         \caption{Vector}
         \label{fig:manic:overview:vector}
     \end{subfigure}
     \hfill
 		\begin{subfigure}{0.42\linewidth}
 			\centering
-			\includegraphics[height=1.2in]{manic/figures/pdf/manic_overview-crop.pdf}
+			\includegraphics[height=1.7in]{manic/figures/pdf/manic_overview-crop.pdf}
 			\caption{Vector-dataflow}
 			\label{fig:manic:overview:vde}
 		\end{subfigure}
