--- a/sonic/8_discuss.tex
+++ b/sonic/8_discuss.tex
@@ -33,10 +33,9 @@ four instructions and nine cycles.
 %
 All told, these limitations cause \sonictails to spend much more energy than necessary.
 % 
-There is ample room to improve inference efficiency via a better architecture.
-
-
-The next three chapters present better architectures: \autoref{chapter:manic} discusses \manic a ULP vector-dataflow co-processor, \autoref{chapter:snafu} describes \snafu, a ULP CGRA generation framework and architecture, and \autoref{chapter:riptide} presents \riptide, a dataflow compiler and ULP CGRA.
+There is ample room to improve inference efficiency via a better architecture -- the subject of the next three chapters.
+% 
+\autoref{chapter:manic} discusses \manic a ULP vector-dataflow co-processor, \autoref{chapter:snafu} describes \snafu, a ULP CGRA generation framework and architecture, and \autoref{chapter:riptide} presents \riptide, a dataflow compiler and ULP CGRA.
 % 
 These architectures achieve much higher energy-efficiency v. existing scalar MCUs (like the MSP430) by leveraging vector and dataflow execution that minimize instruction and data supply energies.
 
