pass on first half of manic sec to make align with silicon

--- a/manic/0_intro.tex
+++ b/manic/0_intro.tex
@@ -56,7 +56,7 @@ instruction supply constitutes a significant fraction of total operating energy.
 %
 Second, data supply through \emph{register file (RF) access} also consumes significant energy.
 %
-Together, we find that instruction and data supply consume
+Together, we estimate that instruction and data supply consume
 $54.4\%$ of the average execution energy in our workloads.
 
 \paragraph{Programming pitfalls of architectural specialization}
