added silicon eval

--- a/manic/3_silicon.tex
+++ b/manic/3_silicon.tex
@@ -9,3 +9,6 @@ To evaluate \manic, we taped-out a testchip with three complete designs: \manic,
 
 \figMANICChip
 \tabMANICEval
+\figMANICEnergyCache
+\figMANICEnergyNoCache
+\figMANICMRAMCase
